--- a/pag/sinopse.css
+++ b/pag/sinopse.css
@@ -25,8 +25,7 @@ body {
     justify-content: space-between;
     align-items: center;
     height: 100vh;
-    line-height: 2em;
-    padding: 20px;
+    padding: 0 0 0 20px;
 }
 
 .sinopse-principal {
